fix: add scrollbar in summary charts v2 increasing the width

--- a/src/app/modules/reports/components/summary-charts-v2/summary-charts-v2.component.scss
+++ b/src/app/modules/reports/components/summary-charts-v2/summary-charts-v2.component.scss
@@ -295,13 +295,11 @@
   }
 
   .details-aside {
-    width: 420px;
+    width: 440px;
     flex-shrink: 0;
     position: sticky;
     top: 16px;
-
-    &--scroll {
-      position: static;
-    }
+    max-height: 100vh;
+    overflow-y: auto;
   }
 }
